--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   
 <div>
   <h2 style="text-align: left; color: white">The love anime (In hinde):-</h2>
-  <iframe width="360" height="200" src="https://youtube.com/embed/7Pl4c1hQius"</iframe>
+  <iframe width="360" height="200" src="https://youtube.com/embed/7Pl4c1hQius" frameborder="0" allow="autoply;encryted-media" allowfullscreen></iframe>
 </div>
   
   </main>
